--- a/index.html
+++ b/index.html
@@ -4,52 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kU88Hhrg0b0a23EQlkH9tkeoQfdJqcdy7WDprmDbvEw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" 
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" />
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  
-  <body class="page">
+  <body>
+    <header></header>
+          <nav>
+          <a href="./index.html">WebStudio</a>
+          <ul>
+            <li><a href="">Studio</a></li></li>
+            <li><a href="">Portfolia</a></li></li>
+            <li><a href="">Contacts</a></li></li>
     <header class="page-header">
-      <div class="container header-container">
         <nav class="header-nav">
-          <a class="logo header-logo" href="./index.html">
-            Web<span class="logo-part">Studio</span>
-          </a>
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contacts</a>
-            </li>
-          </ul>
+            <a class="logo header-logo" href="./index.html">
+                Web<span class="logo-part">Studio</span>
+            </a>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Studio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                </li>
+            </ul>
         </nav>
+
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com"</a>a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>"
         <address class="contacts">
-          <ul class="contacts-list">
-            <li class="contacts-item">
-              <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="contacts-item">
-              <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
+            <ul class="contacts-list">
+                <li class="contacts-item">
+                    <a class="contacts-link" href="mailto:info@devstudio.com"
+                        >info@devstudio.com</a>
+                </li>
+                <li class="contacts-item">
+                    <a class="contacts-link" href="tel:+110001111111"
+                        >+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
-      </div>
     </header>
 
     <main>
@@ -101,28 +115,28 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
+              <img src="./imeges/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
+              <img src="./imeges/tom-ford.jpg" alt="Tom Ford" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" />
+              <img src="./imeges/camila-garcia.jpg" alt="Camila Garcia" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
+              <img src="./imeges/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
@@ -137,42 +151,42 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/bank.jpg" alt="Banking App" width="360" />
+              <img src="./imeges/bank.jpg" alt="Banking App" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/paysent.jpg" alt="Cashless Payment" width="360" />
+              <img src="./imeges/paysent.jpg" alt="Cashless Payment" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/app.jpg" alt="Meditation App" width="360" />
+              <img src="./imeges/app.jpg" alt="Meditation App" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/taxi-server.jpg" alt="Taxi Service" width="360" />
+              <img src="./imeges/taxi-server.jpg" alt="Taxi Service" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/illustration.png" alt="Screen Illustrations" width="360" />
+              <img src="./imeges/illustration.png" alt="Screen Illustrations" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/online-courses.jpg" alt="Online Courses" width="360" />
+              <img src="./imeges/online-courses.jpg" alt="Online Courses" width="360" />
               <div class="portfolio-info">
                <h3 class="portfolio-name">Online Courses</h3>
                <p class="portfolio-type">Marketing</p>
