Fix header logo and nav styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" 
       integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" 
       crossorigin="anonymous" 
-      referrerpolicy="no-referrer" />
+      referrerpolicy="no-referrer"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,49 +20,36 @@
       rel="stylesheet"
     />
     
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet"  href="./css/style.css">
   </head>
   <body>
-    <header></header>
-          <nav>
-          <a href="./index.html">WebStudio</a>
-          <ul>
-            <li><a href="">Studio</a></li></li>
-            <li><a href="">Portfolia</a></li></li>
-            <li><a href="">Contacts</a></li></li>
-    <header class="page-header">
-        <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html">
-                Web<span class="logo-part">Studio</span>
-            </a>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Studio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
-                </li>
-            </ul>
+    <header class="page-header"
+     <nav class="header-nav"
+        <a class="logo header-logo"href="./index.html">
+            Web<span class="logo-part">Studio</span>
+        </a>
+        <ul class="nav-list">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Studio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Portfolia</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contacts</a>
+            </li>
+        </ul>
         </nav>
 
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com"</a>a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>"
         <address class="contacts">
-            <ul class="contacts-list">
-                <li class="contacts-item">
-                    <a class="contacts-link" href="mailto:info@devstudio.com"
-                        >info@devstudio.com</a>
-                </li>
-                <li class="contacts-item">
-                    <a class="contacts-link" href="tel:+110001111111"
-                        >+11 (000) 111-11-11</a>
-                </li>
-            </ul>
+          <ul class="contacts-list">
+            <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+                <a class="contacts-link" href="tel:+1100011111111">+1 (100) 011-1111</a>
+            </li>
+          </ul>
         </address>
     </header>
 
