--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       rel="stylesheet"
     />
     
-    <link rel="stylesheet"  href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="page-header"
-     <nav class="header-nav"
-        <a class="logo header-logo"href="./index.html">
-            Web<span class="logo-part">Studio</span>
-        </a>
-        <ul class="nav-list">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Studio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Portfolia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contacts</a>
-            </li>
-        </ul>
+    <header class="page-header">
+        <nav class="header-nav">
+            <a class="logo" href="./index.html">
+                Web<span class="logo-part">Studio</span>
+            </a>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Studio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Contacts</a>
+                </li>
+            </ul>
         </nav>
 
         <address class="contacts">
