--- a/index.html
+++ b/index.html
@@ -99,28 +99,28 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./imeges/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
+              <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" /> 
               <div class="team-info">
-                <h3 class="team-name">Mark Guerrero</h3>
+                <h3 class="am-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./imeges/tom-ford.jpg" alt="Tom Ford" width="264" />
+              <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./imeges/camila-garcia.jpg" alt="Camila Garcia" width="264" />
+              <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./imeges/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
+              <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
               <div class="team-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
@@ -135,42 +135,42 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./imeges/bank.jpg" alt="Banking App" width="360" />
+              <img src="./images/bank.jpg" alt="Banking App" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./imeges/paysent.jpg" alt="Cashless Payment" width="360" />
+              <img src="./images/paysent.jpg" alt="Cashless Payment" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./imeges/app.jpg" alt="Meditation App" width="360" />
+              <img src="./images/app.jpg" alt="Meditation App" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-type">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./imeges/taxi-server.jpg" alt="Taxi Service" width="360" />
+              <img src="./images/taxi-server.jpg" alt="Taxi Service" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./imeges/illustration.png" alt="Screen Illustrations" width="360" />
+              <img src="./images/illustration.png" alt="Screen Illustrations" width="360" />
               <div class="portfolio-info">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./imeges/online-courses.jpg" alt="Online Courses" width="360" />
+              <img src="./images/online-courses.jpg" alt="Online Courses" width="360" />
               <div class="portfolio-info">
                <h3 class="portfolio-name">Online Courses</h3>
                <p class="portfolio-type">Marketing</p>
