Update CSS styles and layout

--- a/index.html
+++ b/index.html
@@ -48,50 +48,43 @@
     </header>
 
     <main>
-     <section class="hero">
-      <div class="container">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
-      </div>
-     </section>
-
-      <section class="section values">
-        <div class="container">
-          <h2 class="visually-hidden">Our Values</h2>
-          <ul class="values-list">
-            <li class="values-item">
-              <h3 class="values-subtitle">Strategy</h3>
-              <p class="values-text">
+      <section class="section hero">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="btn primary-btn" type="button">Order Service</button>
+      </section>
+  
+      <section class="section features">
+          <h2 class="section-title visually-hidden">Our Values</h2>
+          <ul class="features-list">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Strategy</h3>
+              <p class="features-list-text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
-
-            <li class="values-item">
-              <h3 class="values-subtitle">Punctuality</h3>
-              <p class="values-text">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Punctuality</h3>
+              <p class="features-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-
-            <li class="values-item">
-              <h3 class="values-subtitle">Diligence</h3>
-              <p class="values-text">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Diligence</h3>
+              <p class="features-list-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-
-            <li class="values-item">
-              <h3 class="values-subtitle">Technologies</h3>
-              <p class="values-text">
+            <li class="features-list-item">
+              <h3 class="features-list-title">Technologies</h3>
+              <p class="features-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
-        </div>
       </section>
 
       <section class="section team">
