--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li class="team-item">
               <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" /> 
               <div class="team-info">
-                <h3 class="am-name">Mark Guerrero</h3>
+                <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
