--- a/index.html
+++ b/index.html
@@ -87,107 +87,76 @@
           </ul>
       </section>
 
-      <section class="section team">
-        <div class="container">
-          <h2 class="section-title">Our Team</h2>
-          <ul class="team-list">
-  <li class="team-item">
-    <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
-    <div class="team-info">
-      <h3 class="team-name">Mark Guerrero</h3>
-      <p class="team-position">Product Designer</p>
-    </div>
-  </li>
-  
-  <li class="team-item">
-    <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
-    <div class="team-info">
-      <h3 class="team-name">Tom Ford</h3>
-      <p class="team-position">Frontend Developer</p>
-    </div>
-  </li>
-
-  <li class="team-item">
-    <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" />
-    <div class="team-info">
-      <h3 class="team-name">Camila Garcia</h3>
-      <p class="team-position">Marketing</p>
-    </div>
-  </li>
-
-  <li class="team-item">
-    <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" />
-    <div class="team-info">
-      <h3 class="team-name">Daniel Wilson</h3>
-      <p class="team-position">UI Designer</p>
-    </div>
-  </li>
-</ul>
-         
-        </div>
+      <section class="section-team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
+            <img scr="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
+            <h3 class="portfolio-list-name">Mark Guerrero</h3>
+            <p class="team-list-position">Product Manager</p>
+          </li>
+          <li class="team-list-item">
+            <img scr="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
+            <h3 class="portfolio-list-name">Tom Ford</h3>
+            <p class="team-list-position">Frontend Developer</p>
+          </li>
+          <li class="team-list-item">
+            <img scr="./images/camila-garcia.jpg" alt="Camila-Garcia" width="264" />
+            <h3 class="portfolio-list-name">Camila Garcia</h3>
+            <p class="team-list-position">Marketing</p>
+          </li>
+          <li class="team-list-item">
+            <img scr="./images/daniel-wilson.jpg" alt="Daniel-Wilson" width="264" />
+            <h3 class="portfolio-list-name">Daniel Wilson</h3>
+            <p class="team-list-position">UI Designer</p>
+          </li>
+        </ul>
       </section>
+      
 
       <section class="section portfolio">
-        <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img src="./images/bank.jpg" alt="Banking App" width="360" />
-              <div class="portfolio-info">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-type">App</p>
-              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/paysent.jpg" alt="Cashless Payment" width="360" />
-              <div class="portfolio-info">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-type">Marketing</p>
-              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/app.jpg" alt="Meditation App" width="360" />
-              <div class="portfolio-info">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-type">App</p>
-              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/taxi-server.jpg" alt="Taxi Service" width="360" />
-              <div class="portfolio-info">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-type">Marketing</p>
-              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/illustration.png" alt="Screen Illustrations" width="360" />
-              <div class="portfolio-info">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
-              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/online-courses.jpg" alt="Online Courses" width="360" />
-              <div class="portfolio-info">
                <h3 class="portfolio-name">Online Courses</h3>
                <p class="portfolio-type">Marketing</p>
-              </div>
             </li>
           </ul>
-        </div>
       </section>
     </main>
 
-    <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html">
-          Web<span class="logo-part">Studio</span>
-        </a>
+    <footer class="footer">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
         </p>
-      </div>
     </footer>
   </body>
 </html>
