--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-list-item">
-            <img scr="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="portfolio-list-name">Mark Guerrero</h3>
             <p class="team-list-position">Product Manager</p>
           </li>
           <li class="team-list-item">
-            <img scr="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3 class="portfolio-list-name">Tom Ford</h3>
             <p class="team-list-position">Frontend Developer</p>
           </li>
           <li class="team-list-item">
-            <img scr="./images/camila-garcia.jpg" alt="Camila-Garcia" width="264" />
+            <img src="./images/camila-garcia.jpg" alt="Camila-Garcia" width="264" />
             <h3 class="portfolio-list-name">Camila Garcia</h3>
             <p class="team-list-position">Marketing</p>
           </li>
           <li class="team-list-item">
-            <img scr="./images/daniel-wilson.jpg" alt="Daniel-Wilson" width="264" />
+            <img src="./images/daniel-wilson.jpg" alt="Daniel-Wilson" width="264" />
             <h3 class="portfolio-list-name">Daniel Wilson</h3>
             <p class="team-list-position">UI Designer</p>
           </li>
@@ -138,7 +138,7 @@
                 <p class="portfolio-type">Marketing</p>
             </li>
             <li class="portfolio-item">
-              <img src="./images/illustration.png" alt="Screen Illustrations" width="360" />
+              <img src="./images/illustration.jng.png" alt="Screen Illustrations" width="360" />
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
             </li>
