Update styles for footer and portfolio sections

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p class="portfolio-type">Marketing</p>
             </li>
             <li class="portfolio-item">
-              <img src="./images/illustration.jng.png" alt="Screen Illustrations" width="360" />
+              <img src="./images/illustrations.jpg" alt="Screen Illustrations" width="360" />
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
             </li>
