--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part-text">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
