Fix team section: added team-list-name class, updated CSS, all checks green

--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
         <ul class="team-list">
           <li class="team-list-item">
             <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="portfolio-list-name">Mark Guerrero</h3>
+            <h3 class="team-list-name">Mark Guerrero</h3>
             <p class="team-list-position">Product Manager</p>
           </li>
           <li class="team-list-item">
             <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
-            <h3 class="portfolio-list-name">Tom Ford</h3>
+            <h3 class="team-list-name">Tom Ford</h3>
             <p class="team-list-position">Frontend Developer</p>
           </li>
           <li class="team-list-item">
             <img src="./images/camila-garcia.jpg" alt="Camila-Garcia" width="264" />
-            <h3 class="portfolio-list-name">Camila Garcia</h3>
+            <h3 class="team-list-name">Camila Garcia</h3>
             <p class="team-list-position">Marketing</p>
           </li>
           <li class="team-list-item">
             <img src="./images/daniel-wilson.jpg" alt="Daniel-Wilson" width="264" />
-            <h3 class="portfolio-list-name">Daniel Wilson</h3>
+            <h3 class="team-list-name">Daniel Wilson</h3>
             <p class="team-list-position">UI Designer</p>
           </li>
         </ul>
