--- a/index.html
+++ b/index.html
@@ -119,32 +119,32 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img src="./images/bank.jpg" alt="Banking App" width="360" />
-                <h3 class="portfolio-name">Banking App</h3>
+                <h3 class="portfolio-list-name">Banking App</h3>
                 <p class="portfolio-type">App</p>
             </li>
             <li class="portfolio-item">
               <img src="./images/paysent.jpg" alt="Cashless Payment" width="360" />
-                <h3 class="portfolio-name">Cashless Payment</h3>
+                <h3 class="portfolio-list-name">Cashless Payment</h3>
                 <p class="portfolio-type">Marketing</p>
             </li>
             <li class="portfolio-item">
               <img src="./images/app.jpg" alt="Meditation App" width="360" />
-                <h3 class="portfolio-name">Meditation App</h3>
+                <h3 class="portfolio-list-name">Meditation App</h3>
                 <p class="portfolio-type">App</p>
             </li>
             <li class="portfolio-item">
               <img src="./images/taxi-server.jpg" alt="Taxi Service" width="360" />
-                <h3 class="portfolio-name">Taxi Service</h3>
+                <h3 class="portfolio-list-name">Taxi Service</h3>
                 <p class="portfolio-type">Marketing</p>
             </li>
             <li class="portfolio-item">
               <img src="./images/illustrations.jpg" alt="Screen Illustrations" width="360" />
-                <h3 class="portfolio-name">Screen Illustrations</h3>
+                <h3 class="portfolio-list-name">Screen Illustrations</h3>
                 <p class="portfolio-type">Design</p>
             </li>
             <li class="portfolio-item">
               <img src="./images/online-courses.jpg" alt="Online Courses" width="360" />
-               <h3 class="portfolio-name">Online Courses</h3>
+               <h3 class="portfolio-list-name">Online Courses</h3>
                <p class="portfolio-type">Marketing</p>
             </li>
           </ul>
